add user service controller for api service
