# src/api_service/openapi.yaml
@@ -23,6 +23,7 @@ paths:
       tags:
         - Greeting
       description: Get a hello-world greeting.
+      x-openapi-router-controller: src.api_service.controllers.greeting_controller
       operationId: greet
       # no request body is needed
       responses:
@@ -56,6 +57,7 @@ paths:
       tags:
         - Product
       description: Find product by ID
+      x-openapi-router-controller: src.api_service.controllers.product_controller
       operationId: get_product_by_id
       parameters:
         - name: productId
@@ -83,6 +85,7 @@ paths:
       tags:
         - User
       summary: Register a new user
+      x-openapi-router-controller: src.api_service.controllers.user_controller
       operationId: register_user
       requestBody:
         required: true
@@ -109,6 +112,7 @@ paths:
       tags:
         - User
       summary: Logs user into the system
+      x-openapi-router-controller: src.api_service.controllers.user_controller
       operationId: login_user
       requestBody:
         required: true
@@ -122,7 +126,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AuthToken' 
+                type: object
+                properties:
+                  token:
+                    type: string
+                    description: JWT token for authentication
+                    example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+                  user:
+                    $ref: '#/components/schemas/UserInfo'
         '401':
           description: Invalid username or password.
           content:
@@ -135,7 +146,8 @@ paths:
       tags:
         - User
       summary: Get current user's profile
-      operationId: getCurrentUser
+      x-openapi-router-controller: src.api_service.controllers.user_controller
+      operationId: get_current_user
       security:
         - bearerAuth: []
       responses:
@@ -151,7 +163,8 @@ paths:
       tags:
         - User
       summary: Update current user's profile
-      operationId: updateCurrentUser
+      x-openapi-router-controller: src.api_service.controllers.user_controller
+      operationId: update_current_user
       security:
         - bearerAuth: []
       requestBody:
@@ -176,6 +189,35 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error' 
+
+  /users/me/delete:
+    post:
+      tags:
+        - User
+      summary: Delete the current user
+      x-openapi-router-controller: src.api_service.controllers.user_controller
+      operationId: deactivate_user
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: User deleted successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+        '401':
+          description: Unauthorized, authentication token is missing or invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /orders:
     get:
