# src/api_service/out/openapi_server/controllers/user_controller.py
@@ -3,13 +3,25 @@ from typing import Dict
 from typing import Tuple
 from typing import Union
 
-from openapi_server.models.auth_token import AuthToken  # noqa: E501
 from openapi_server.models.error import Error  # noqa: E501
+from openapi_server.models.login_user200_response import LoginUser200Response  # noqa: E501
+from openapi_server.models.message import Message  # noqa: E501
 from openapi_server.models.user_info import UserInfo  # noqa: E501
 from openapi_server.models.user_login import UserLogin  # noqa: E501
 from openapi_server.models.user_registration import UserRegistration  # noqa: E501
 from openapi_server.models.user_update import UserUpdate  # noqa: E501
 from openapi_server import util
+
+
+def deactivate_user():  # noqa: E501
+    """Delete the current user
+
+     # noqa: E501
+
+
+    :rtype: Union[Message, Tuple[Message, int], Tuple[Message, int, Dict[str, str]]
+    """
+    return 'do some magic!'
 
 
 def get_current_user():  # noqa: E501
@@ -31,7 +43,7 @@ def login_user(body):  # noqa: E501
     :param user_login: 
     :type user_login: dict | bytes
 
-    :rtype: Union[AuthToken, Tuple[AuthToken, int], Tuple[AuthToken, int, Dict[str, str]]
+    :rtype: Union[LoginUser200Response, Tuple[LoginUser200Response, int], Tuple[LoginUser200Response, int, Dict[str, str]]
     """
     user_login = body
     if connexion.request.is_json:
