# src/api_service/out/openapi_server/models/login_user200_response.py
@@ -1,0 +1,91 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server.models.user_info import UserInfo
+from openapi_server import util
+
+from openapi_server.models.user_info import UserInfo  # noqa: E501
+
+class LoginUser200Response(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, token=None, user=None):  # noqa: E501
+        """LoginUser200Response - a model defined in OpenAPI
+
+        :param token: The token of this LoginUser200Response.  # noqa: E501
+        :type token: str
+        :param user: The user of this LoginUser200Response.  # noqa: E501
+        :type user: UserInfo
+        """
+        self.openapi_types = {
+            'token': str,
+            'user': UserInfo
+        }
+
+        self.attribute_map = {
+            'token': 'token',
+            'user': 'user'
+        }
+
+        self._token = token
+        self._user = user
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'LoginUser200Response':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The login_user_200_response of this LoginUser200Response.  # noqa: E501
+        :rtype: LoginUser200Response
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def token(self) -> str:
+        """Gets the token of this LoginUser200Response.
+
+        JWT token for authentication  # noqa: E501
+
+        :return: The token of this LoginUser200Response.
+        :rtype: str
+        """
+        return self._token
+
+    @token.setter
+    def token(self, token: str):
+        """Sets the token of this LoginUser200Response.
+
+        JWT token for authentication  # noqa: E501
+
+        :param token: The token of this LoginUser200Response.
+        :type token: str
+        """
+
+        self._token = token
+
+    @property
+    def user(self) -> UserInfo:
+        """Gets the user of this LoginUser200Response.
+
+
+        :return: The user of this LoginUser200Response.
+        :rtype: UserInfo
+        """
+        return self._user
+
+    @user.setter
+    def user(self, user: UserInfo):
+        """Sets the user of this LoginUser200Response.
+
+
+        :param user: The user of this LoginUser200Response.
+        :type user: UserInfo
+        """
+
+        self._user = user
